Write down that the rules leave a number no value, and ask the laws of every state
It was a range whose ends had crossed, which is how such a number arrives and not
what it is. A reader that has to notice the crossing is a reader that can forget
to, and two of them had: the join took the right-hand branch when both leave the
number no value, so a choice between two such alternatives answered by which one
was written second. It is a state now, decided once where a range becomes one.

And the laws are asked of every state rather than of the ones somebody thought
to write down. What a number is to this reading is one of a handful of things,
and every pair and every triple of them is put to the two connectives — which
found, in the first run, that a choice between one reading and itself dropped a
line the reading was waiting on, where both sides leave the number no value.
That case was in nobody's list.

A failing run names the pairs that disagree and says nothing about the rest.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>