@@ -18,14 +18,20 @@ import java.util.Set;
  * <ul>
  *   <li><b>Unsaid</b> — no rule of this reading spoke of it, so it runs as far as it ever did. It
  *       is absent from both halves below.
- *   <li><b>Known</b> — some rule stopped it, and this is where.
- *   <li><b>Nothing left</b> — the rules stopped it past themselves, so no value of them is at it.
- *       A known range whose ends have crossed.
- *   <li><b>Open</b> — some rule stopped it somewhere nothing here worked out.
+ *   <li><b>{@link Left.Known}</b> — some rule stopped it, and this is where.
+ *   <li><b>{@link Left.NothingLeft}</b> — the rules stopped it past themselves, so no value of
+ *       them is at it.
+ *   <li><b>Open</b> — some rule stated a line on it that nothing here worked out, once for each
+ *       place an author wrote one ({@link OpenEnd}).
  * </ul>
  *
  * <p>A number can be known and open at once: a conjunction of a bound this reading placed and one
  * it could not is both, and each half is wanted by a different reader.
+ *
+ * <p><b>Nothing left is a state and not a shape a range happens to take.</b> Ends that have crossed
+ * are how such a number arrives, and a reader that had to notice the crossing is a reader that can
+ * forget to — which is what happened while the join and the question a choice asks the branch
+ * beside it disagreed about whether such a number was bounded. What is written down is the answer.
  *
  * <p><b>One algebra, folded over the two trees this reading is folded over.</b> What the rules of a
  * whole declaration leave a number is settled over the tree the values are derived from, where a
@@ -51,33 +57,48 @@ import java.util.Set;
  * value is this reading's own knowledge, and it may act on it inside itself: a choice with such an
  * alternative leaves what the alternative beside it leaves, because every value of the choice is in
  * that one. What it may not do is hand the emptiness to the fates, and it does not — nobody outside
- * is told, and the branch stands or falls on what the values and the orders say. Read as nothing
- * said, the same three alternatives came to two answers depending on where the brackets were.
+ * is told, and the branch stands or falls on what the values and the orders say.
  *
- * @param known where each number some rule stopped is left, whether or not a value is there
- * @param open  every line on one of these numbers that nothing here placed, one for each place an
- *              author wrote one ({@link OpenEnd})
+ * @param byNumber what the rules leave each number some rule of this reading spoke of
+ * @param open     every line on one of these numbers that nothing here placed
  */
-record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> open) {
+record BoundaryState(Map<DerivedNumber, BoundaryState.Left> byNumber, Set<OpenEnd> open) {
+
+    /** What the rules of one reading leave a number they spoke of. */
+    sealed interface Left {
+
+        /** They stop it inside {@code range}, which holds a value. */
+        record Known(OrderedInterval range) implements Left {}
+
+        /** They stop it past themselves, so no value of them is at it. */
+        record NothingLeft() implements Left {}
+    }
+
+    private static final Left NOTHING_LEFT = new Left.NothingLeft();
 
     /** What a leaf stating a line on none of these numbers leaves them, which is most leaves. */
     private static final BoundaryState NOTHING = new BoundaryState(Map.of(), Set.of());
 
     BoundaryState {
-        known = known.isEmpty() ? Map.of()
-                : Collections.unmodifiableMap(new LinkedHashMap<>(known));
+        byNumber = byNumber.isEmpty() ? Map.of()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(byNumber));
         open = open.isEmpty() ? Set.of()
                 : Collections.unmodifiableSet(new LinkedHashSet<>(open));
     }
 
-    /** A reading that stopped none of these numbers. */
+    /** A reading that spoke of none of these numbers. */
     static BoundaryState nothing() {
         return NOTHING;
     }
 
-    /** One number stopped inside {@code range}. */
+    /**
+     * One number the rules stop inside {@code range}.
+     *
+     * <p>Which of the two states that is is decided here, once, off the range — so nothing further
+     * on has to look at the ends to find out.
+     */
     static BoundaryState bounded(DerivedNumber number, OrderedInterval range) {
-        return new BoundaryState(Map.of(number, range), Set.of());
+        return new BoundaryState(Map.of(number, leftBy(range)), Set.of());
     }
 
     /** One line stated on a number and placed by nothing. */
@@ -86,25 +107,30 @@ record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> ope
     }
 
     /**
-     * Where the rules leave {@code number}, which is everywhere none of them stopped it.
+     * Where the rules stop {@code number}, or null where they stop it nowhere a value of them is.
      *
-     * <p>The range as the rules leave it, ends crossed and all. A caller drawing a line reads the
-     * ends; that they have crossed is a fact about the rules and is that caller's to notice.
+     * <p>Null for a number nothing spoke of and for one the rules leave no value at, which are the
+     * two a line may not be drawn from: the first has no ends and the second has ends nothing is
+     * between. What has been read in the second case is that the rules contradict there, and that
+     * is said by whoever answers whether a value exists.
      */
-    OrderedInterval at(DerivedNumber number) {
-        return known.getOrDefault(number, OrderedInterval.OPEN);
+    OrderedInterval knownAt(DerivedNumber number) {
+        return byNumber.get(number) instanceof Left.Known it ? it.range() : null;
     }
 
     /** Whether some rule stopped {@code number} anywhere a value of them is. */
     private boolean holdsDown(DerivedNumber number) {
-        OrderedInterval range = known.get(number);
-        return range != null && holdsAValue(range);
+        return byNumber.get(number) instanceof Left.Known;
     }
 
     /** Whether the rules of this reading leave {@code number} no value at all. */
     private boolean leavesNothingAt(DerivedNumber number) {
-        OrderedInterval range = known.get(number);
-        return range != null && !holdsAValue(range);
+        return byNumber.get(number) instanceof Left.NothingLeft;
+    }
+
+    /** Whether this reading spoke of {@code number} at all. */
+    private boolean spokeOf(DerivedNumber number) {
+        return byNumber.containsKey(number) || openAt(number);
     }
 
     /** Whether some line stated on {@code number} here was placed by nothing. */
@@ -115,9 +141,10 @@ record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> ope
     /**
      * Both readings holding at once.
      *
-     * <p>A number either of them stopped is one the pair stops, at the tighter of what they leave;
-     * a line either of them left open is one the pair left open, because the end it did not work
-     * out may be the one the values finally stop at.
+     * <p>A number either of them stopped is one the pair stops, at the tighter of what they leave —
+     * and where the tighter of two leaves no value, the pair leaves none. A line either of them
+     * left open is one the pair left open, because the end it did not work out may be the one the
+     * values finally stop at.
      */
     BoundaryState both(BoundaryState other) {
         if (other == NOTHING) {
@@ -126,41 +153,61 @@ record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> ope
         if (this == NOTHING) {
             return other;
         }
-        Map<DerivedNumber, OrderedInterval> out = new LinkedHashMap<>(known);
-        other.known.forEach((number, range) -> out.merge(number, range, OrderedInterval::meet));
+        Map<DerivedNumber, Left> out = new LinkedHashMap<>(byNumber);
+        other.byNumber.forEach((number, left) -> out.merge(number, left, BoundaryState::met));
         Set<OpenEnd> ends = new LinkedHashSet<>(open);
         ends.addAll(other.open);
         return new BoundaryState(out, ends);
     }
 
+    /** What two readings that both stopped one number leave it. */
+    private static Left met(Left here, Left there) {
+        if (here instanceof Left.Known a && there instanceof Left.Known b) {
+            return leftBy(a.range().meet(b.range()));
+        }
+        return NOTHING_LEFT;
+    }
+
     /**
      * Either of them, which is what a choice between two branches somebody can be in leaves.
      *
-     * <p>Asked of one number at a time, over every number either side speaks of.
+     * <p>Asked of one number at a time, over every number either side spoke of.
      *
      * <ul>
      *   <li>Where one branch leaves the number no value, the choice leaves what the other leaves:
-     *       every value of the choice is in that other branch.
+     *       every value of the choice is in that other branch. Where both do, so does the choice,
+     *       and neither branch's lines are lines anybody is owed.
      *   <li>Where one branch says nothing of it, the choice says nothing: a value taking that
-     *       branch stands anywhere on the number, so the choice does too, and no end of it is
+     *       branch stands anywhere on the number, so the choice does too, and no line on it is
      *       waiting on a reader.
      *   <li>Where both stopped it, the choice stops it at whichever reaches further out.
      *   <li>And a line one branch left open is one the choice leaves open, because the branch
      *       beside it does not put the number at every value — which is the one thing a choice can
      *       show about such a line.
      * </ul>
+     *
+     * <p>Every one of those reads the same either way round, which is what a choice is.
      */
     BoundaryState either(BoundaryState other) {
-        Set<DerivedNumber> spoken = new LinkedHashSet<>(known.keySet());
+        Set<DerivedNumber> spoken = new LinkedHashSet<>(byNumber.keySet());
         open.forEach(each -> spoken.add(each.number()));
-        other.known.keySet().forEach(spoken::add);
+        other.byNumber.keySet().forEach(spoken::add);
         other.open.forEach(each -> spoken.add(each.number()));
-        Map<DerivedNumber, OrderedInterval> out = new LinkedHashMap<>();
+        Map<DerivedNumber, Left> out = new LinkedHashMap<>();
         Set<OpenEnd> ends = new LinkedHashSet<>();
         for (DerivedNumber number : spoken) {
-            if (leavesNothingAt(number)) {
+            boolean here = leavesNothingAt(number);
+            boolean there = other.leavesNothingAt(number);
+            if (here && there) {
+                // Neither branch has a value at the number, so the choice has none — and a line
+                // either of them left open is still one nothing placed, since neither puts the
+                // number at every value. Both sides', so that a choice between one reading and
+                // itself is that reading.
+                keep(number, out, ends);
                 other.keep(number, out, ends);
-            } else if (other.leavesNothingAt(number)) {
+            } else if (here) {
+                other.keep(number, out, ends);
+            } else if (there) {
                 keep(number, out, ends);
             } else {
                 chosen(number, other, out, ends);
@@ -171,11 +218,10 @@ record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> ope
 
     /** What this branch leaves {@code number}, carried out whole because it is what the choice
      *  leaves: nobody is in the branch beside it. */
-    private void keep(DerivedNumber number, Map<DerivedNumber, OrderedInterval> out,
-                      Set<OpenEnd> ends) {
-        OrderedInterval range = known.get(number);
-        if (range != null) {
-            out.put(number, range);
+    private void keep(DerivedNumber number, Map<DerivedNumber, Left> out, Set<OpenEnd> ends) {
+        Left left = byNumber.get(number);
+        if (left != null) {
+            out.put(number, left);
         }
         open.forEach(each -> {
             if (each.number().equals(number)) {
@@ -186,25 +232,22 @@ record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> ope
 
     /** What a choice between two branches somebody can be in leaves {@code number}. */
     private void chosen(DerivedNumber number, BoundaryState other,
-                        Map<DerivedNumber, OrderedInterval> out, Set<OpenEnd> ends) {
-        OrderedInterval here = known.get(number);
-        OrderedInterval there = other.known.get(number);
+                        Map<DerivedNumber, Left> out, Set<OpenEnd> ends) {
+        // A branch that says nothing of the number puts it at every value, so the choice does too
+        // and nothing about it is waiting on a reader.
+        if (!spokeOf(number) || !other.spokeOf(number)) {
+            return;
+        }
+        OrderedInterval here = knownAt(number);
+        OrderedInterval there = other.knownAt(number);
         if (here != null && there != null) {
-            out.put(number, here.join(there));
+            out.put(number, leftBy(here.join(there)));
         }
         if (other.holdsDown(number) || other.openAt(number)) {
-            open.forEach(each -> {
-                if (each.number().equals(number)) {
-                    ends.add(each);
-                }
-            });
+            keep(number, new LinkedHashMap<>(), ends);
         }
         if (holdsDown(number) || openAt(number)) {
-            other.open.forEach(each -> {
-                if (each.number().equals(number)) {
-                    ends.add(each);
-                }
-            });
+            other.keep(number, new LinkedHashMap<>(), ends);
         }
     }
 
@@ -218,7 +261,9 @@ record BoundaryState(Map<DerivedNumber, OrderedInterval> known, Set<OpenEnd> ope
         return NOTHING;
     }
 
-    private static boolean holdsAValue(OrderedInterval range) {
-        return Endpoint.someValueLiesBetween(range.low(), range.high());
+    /** Which of the two a range is, asked once where a range becomes a state. */
+    private static Left leftBy(OrderedInterval range) {
+        return Endpoint.someValueLiesBetween(range.low(), range.high())
+                ? new Left.Known(range) : NOTHING_LEFT;
     }
 }
